--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"arctic": "^2.3.0",
 		"buffer-crc32": "^1.0.0",
 		"mongodb": "^6.11.0",
+		"stripe": "^17.6.0",
 		"web-push": "^3.6.7"
 	}
 }
